@@ -1,3 +1,9 @@
+2017-02-09  Richard Biener  <rguenther@suse.de>
+
+	PR tree-optimization/69823
+	* graphite-scop-detection.c (scop_detection::harmful_loop_in_region):
+	Properly enumerate all BBs in the region.  Use auto_vec/auto_bitmap.
+
 2017-02-09  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* config/arc/arc-c.def: Add __NPS400__ definition.
